--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -22,6 +22,12 @@
 				Precios
 			</button>
 		</div>
+
+		<div style="width: auto; margin-left: 20px;">
+			<a href="/api/@juego.Id" target="_blank" class="boton-pequeño" style="padding: 10px 15px;">
+				Api
+			</a>
+		</div>
 	</div>
 
 	@if (pestañaMostrar > 0)
