--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -31,57 +31,55 @@
 				</div>
 				
 				<div class="juego-titulo">
-					@juego.Nombre <br />
+					<div>@juego.Nombre</div>
 
-					<div style="margin-top: 10px; display: flex; align-items: center;">
-						<div style="margin-right: 10px;">
-							@foreach (JuegoDRM drm in JuegoDRM2.CargarDRMs())
+					<div style="margin-right: 10px; margin-top: 10px; display: flex; align-items: center;">
+						@foreach (JuegoDRM drm in JuegoDRM2.CargarDRMs())
+						{
+							@if (drm != JuegoDRM.NoEspecificado)
 							{
-								@if (drm != JuegoDRM.NoEspecificado)
+								@if (VerificarMostrarDRM(idioma, drm, juego) == true)
 								{
-									@if (VerificarMostrarDRM(idioma, drm, juego) == true)
+									@if (drm == JuegoDRM.DRMFree)
 									{
-										@if (drm == JuegoDRM.DRMFree)
-										{
-											<button onclick="moverScroll('@drm')" class="boton-pequeño" style="width: 40px; height: 40px; text-align: center; padding: 7px; margin-right: 10px;"><div style="font-weight: bold; font-size: 10px;">DRM Free</div></button>
-										}
-										else
-										{
-											<button onclick="moverScroll('@drm')" class="boton-pequeño" style="width: 40px; height: 40px; text-align: center; padding: 9px; margin-right: 10px">
-												<div style="display: flex; align-items: center;">
-													<img src="@JuegoDRM2.SacarImagen(drm)" style="max-width: 100%; max-height: 100%;" />
-												</div>
-											</button>
-										}
+										<button onclick="moverScroll('@drm')" class="boton-pequeño" style="width: 40px; height: 40px; text-align: center; padding: 7px; margin-right: 10px;"><div style="font-weight: bold; font-size: 10px;">DRM Free</div></button>
+									}
+									else
+									{
+										<button onclick="moverScroll('@drm')" class="boton-pequeño" style="width: 40px; height: 40px; text-align: center; padding: 9px; margin-right: 10px">
+											<div style="display: flex; align-items: center;">
+												<img src="@JuegoDRM2.SacarImagen(drm)" style="max-width: 100%; max-height: 100%;" />
+											</div>
+										</button>
 									}
 								}
 							}
-						</div>
-						
+						}
+
 						@if (BundlesDisponibles(juego.Bundles).Count > 0)
 						{
-							<div style="margin-right: 15px; font-size: 16px;">
+							<div style="margin-left: 15px; font-size: 16px;">
 								<a onclick="moverScroll('bundles')" style="color: var(--colorTextoOscuro); text-decoration: underline; cursor: pointer;">@Idiomas.CogerCadena(idioma, "Layout.Bundles")</a>
 							</div>
 						}
 
 						@if (GratisDisponibles(juego.Gratis).Count > 0)
 						{
-							<div style="margin-right: 15px; font-size: 16px;">
+							<div style="margin-left: 15px; font-size: 16px;">
 								<a onclick="moverScroll('gratis')" style="color: var(--colorTextoOscuro); text-decoration: underline; cursor: pointer;">@Idiomas.CogerCadena(idioma, "Layout.Free")</a>
 							</div>
 						}
 
 						@if (SuscripcionesDisponibles(juego.Suscripciones).Count > 0)
 						{
-							<div style="margin-right: 15px; font-size: 16px;">
+							<div style="margin-left: 15px; font-size: 16px;">
 								<a onclick="moverScroll('suscripciones')" style="color: var(--colorTextoOscuro); text-decoration: underline; cursor: pointer;">@Idiomas.CogerCadena(idioma, "Layout.Subscriptions")</a>
 							</div>
 						}
-					</div>					
+					</div>
 				</div>
 
-				<div style="text-align: center; min-width: 300px;">
+				<div style="text-align: right; min-width: 350px; margin: 5px 20px;">
 					@if (juego.Analisis != null)
 					{
 						<div style="font-size: 14px;">
@@ -112,7 +110,7 @@
 						</div>
 					}
 
-					<div style="display: flex; align-items: center; justify-content: center; margin-top: 15px;">
+					<div style="display: flex; align-items: center; justify-content: right; margin-top: 15px;">
 						<div>
 							@if (juego.Caracteristicas.Windows == true)
 							{
@@ -130,7 +128,7 @@
 							}
 						</div>						
 
-						<div style="margin-left: 20px; margin-right: 20px;">
+						<div style="margin-left: 20px;">
 							<label>@Idiomas.CogerCadena(idioma, "Game.String1")</label>
 
 							@if (juego.IdSteam > 0)
@@ -608,7 +606,7 @@
 
 	protected override async void OnAfterRender(bool firstRender)
 	{
-		// base.OnAfterRender(firstRender);
+		base.OnAfterRender(firstRender);
 		await JS.InvokeAsync<string>("cargarImagen", "1");
 	}
 
