--- a/pepeizqs deals web/Pages/Admin/Juegos/Añadir.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Juegos/Añadir.cshtml
@@ -41,7 +41,7 @@
 				<label class="texto-info-entrada admin-añadir-espacio-top">Titulo</label>
 				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Nombre"/>
 
-				<label class="texto-info-entrada admin-añadir-espacio-top">Tipo (Game/DLC/Bundle)</label>
+				<label class="texto-info-entrada admin-añadir-espacio-top">Tipo (Game/DLC/Bundle/Music)</label>
 				<input class="entrada-texto" name="tipo" value="@Model.juegoAñadir.Tipo" />
 
 				<label class="texto-info-entrada admin-añadir-espacio-top">Fecha Comprobación API Steam</label>
