--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -41,6 +41,10 @@
 				<div class="admin-tiempohace">@Herramientas.Divisas.Mensaje()</div>
 			</div>
 		</div>
+
+		<div style="margin-top: 20px;">
+			Turno: @LeerOrden()
+		</div>	
 	</div>
 }
 
@@ -73,5 +77,10 @@
 				// Herramientas.Buscador.ActualizarCodigos();
 			}
 		}
+	}
+
+	private string LeerOrden()
+	{
+		return BaseDatos.Tiendas.Admin.TareaLeerOrden().ToString();
 	}
 }
