--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -342,7 +342,7 @@ else
 	</div>
 
 	<div style="margin-bottom: 20px; margin-left: auto; margin-right: auto; width: 400px;">
-		<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/LastLows">
+		<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/HistoricalLow?mode=last">
 			@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastLowsMore")
 		</a>
 	</div>
